# nagad2

./: build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: buid.yml  new.yml
app/: CMakeLists.txt  build.gradle.kts
app/main/: AndroidManifest.xml
app/src/main/: proguard-rules.pro
app/src/main/kotlin/com/konasl/nagad/: AppLifecycleObserver.kt  Compat.kt  CoreApplication.kt  jni_bridge.cpp
app/src/main/kotlin/com/konasl/nagad/di/: AppModule.kt
app/src/main/kotlin/com/konasl/nagad/engine/: VirtualEngineSDK.kt  VirtualEngineService.kt
app/src/main/kotlin/com/konasl/nagad/engine/fs/: VirtualFileSystem.kt
app/src/main/kotlin/com/konasl/nagad/engine/hooks/: NativeHookManager.kt
app/src/main/kotlin/com/konasl/nagad/engine/ipc/: VirtualServiceManager.kt
app/src/main/kotlin/com/konasl/nagad/engine/loader/: VirtualClassLoader.kt
app/src/main/kotlin/com/konasl/nagad/engine/model/: Models.kt
app/src/main/kotlin/com/konasl/nagad/engine/process/: ProcessSlotManager.kt
app/src/main/kotlin/com/konasl/nagad/receiver/: Receivers.kt
app/src/main/kotlin/com/konasl/nagad/stub/: Stubs.kt
app/src/main/kotlin/com/konasl/nagad/ui/dashboard/: AppListAdapter.kt  DashboardActivity.kt
app/src/main/kotlin/com/konasl/nagad/util/: AppLogger.kt
app/src/main/kotlin/com/konasl/nagad/viewmodel/: DashboardViewModel.kt
